--- a/recursos/isolinux.cfg
+++ b/recursos/isolinux.cfg
@@ -1,5 +1,5 @@
 default vesamenu.c32
-timeout 30
+timeout 300
 
 display boot.msg
 
@@ -59,21 +59,20 @@ menu separator # insert an empty line
 menu separator # insert an empty line
 
 label kickstart
-  menu label ^Kickstart Installation of RHEL8 PAPI
+  menu label ^Kickstart Installation of CentOS 8 PAPIRRI
   kernel vmlinuz
-  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-8-3-0-BaseOS-x86_64 inst.ks=cdrom:/ks.cfg quiet
+  append initrd=initrd.img inst.stage2=hd:sr0 inst.ks=cdrom:/ks.cfg quiet
   
-
 label linux
-  menu label ^Install Red Hat Enterprise Linux 8.3
+  menu label ^Install CentOS 8
   kernel vmlinuz
-  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-8-3-0-BaseOS-x86_64 quiet
+  append initrd=initrd.img inst.stage2=hd:sr0 quiet
 
 label check
-  menu label Test this ^media & install Red Hat Enterprise Linux 8.3
+  menu label Test this ^media & install CentOS
   menu default
   kernel vmlinuz
-  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-8-3-0-BaseOS-x86_64 rd.live.check quiet
+  append initrd=initrd.img inst.stage2=hd:LABEL=CentOS-8-3-2011-x86_64-dvd rd.live.check quiet
 
 menu separator # insert an empty line
 
