--- a/recursos/isolinux.cfg
+++ b/recursos/isolinux.cfg
@@ -59,7 +59,7 @@ menu separator # insert an empty line
 menu separator # insert an empty line
 
 label kickstart
-  menu label ^Kickstart Installation of CentOS 8 PAPIRRI
+  menu label ^Kickstart Installation of CentOS 8
   kernel vmlinuz
   append initrd=initrd.img inst.stage2=hd:sr0 inst.ks=cdrom:/ks.cfg quiet
   
