--- a/recursos/grub.cfg
+++ b/recursos/grub.cfg
@@ -1,86 +1,157 @@
-source /boot/grub/config.cfg
 
-# Live boot
-menuentry "Live system" {
-	linux	/live/vmlinuz-5.9.0-kali1-amd64 boot=live components quiet splash noeject findiso=${iso_path}
-	initrd	/live/initrd.img-5.9.0-kali1-amd64
-}
-menuentry "Live system (fail-safe mode)" {
-	linux	/live/vmlinuz-5.9.0-kali1-amd64 boot=live components noeject memtest noapic noapm nodma nomce nolapic nomodeset nosmp nosplash vga=normal
-	initrd	/live/initrd.img-5.9.0-kali1-amd64
-}
-
-
-menuentry "Live system (forensic mode)" {
-	linux /live/vmlinuz-5.9.0-kali1-amd64 boot=live components quiet splash noeject findiso=${iso_path} noswap noautomount
-	initrd /live/initrd.img-5.9.0-kali1-amd64
-}
-menuentry "Live system (persistence, check kali.org/prst)" {
-	linux /live/vmlinuz-5.9.0-kali1-amd64 boot=live components quiet splash noeject findiso=${iso_path} persistence
-	initrd /live/initrd.img-5.9.0-kali1-amd64
-}
-menuentry "Live system (encrypted persistence, check kali.org/prst)" {
-	linux /live/vmlinuz-5.9.0-kali1-amd64 boot=live components quiet splash noeject findiso=${iso_path} persistent=cryptsetup persistence-encryption=luks persistence
-	initrd /live/initrd.img-5.9.0-kali1-amd64
-}
-
-# Installer (if any)
-menuentry "Start installer" {
-	linux	/install/gtk/vmlinuz video=vesa:ywrap,mtrr vga=788 quiet net.ifnames=0
-	initrd	/install/gtk/initrd.gz
-}
-
-
-if [ ! -e /boot/grub/install.cfg ]; then
-menuentry "Start installer with speech synthesis" {
-	linux /install/gtk/vmlinuz speakup.synth=soft video=vesa:ywrap,mtrr vga=788 quiet net.ifnames=0
-	initrd /install/gtk/initrd.gz
-}
+if loadfont $prefix/font.pf2 ; then
+  set gfxmode=800x600
+  set gfxpayload=keep
+  insmod efi_gop
+  insmod efi_uga
+  insmod video_bochs
+  insmod video_cirrus
+  insmod gfxterm
+  insmod png
+  terminal_output gfxterm
 fi
 
-submenu 'Advanced options...' {
+if background_image /isolinux/splash.png; then
+  set color_normal=light-gray/black
+  set color_highlight=white/black
+elif background_image /splash.png; then
+  set color_normal=light-gray/black
+  set color_highlight=white/black
+else
+  set menu_color_normal=cyan/blue
+  set menu_color_highlight=white/blue
+fi
 
-source /boot/grub/theme.cfg
-
-# More installer entries (if any)
-menuentry "Unattend Install " {
-	linux	/install/gtk/vmlinuz vga=normal net.ifnames=0 preseed/file=/cdrom/preseed.cfg auto=true priority=critical debian-installer/locale=en_US keyboard-configuration/layoutcode=us ubiquity/reboot=true languagechooser/language-name=English countrychooser/shortlist=US localechooser/supported-locales=en_US.UTF-8 quiet net.ifnames=0
-	initrd	/install/gtk/initrd.gz
+insmod play
+play 960 440 1 0 4 440 1
+set theme=/boot/grub/theme/1
+menuentry --hotkey=g 'Unattended install' {
+    set background_color=black
+    linux    /install.amd/vmlinuz preseed/file=/cdrom/preseed.cfg locale=en_US keymap=es hostname={{hostname}} domain=local.lan desktop=xfce vga=788 --- quiet 
+    initrd   /install.amd/gtk/initrd.gz
 }
-menuentry "Install in text mode" {
-	linux	/install/vmlinuz vga=normal quiet net.ifnames=0
-	initrd	/install/initrd.gz
+menuentry --hotkey=i 'Install' {
+    set background_color=black
+    linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce vga=788 --- quiet 
+    initrd   /install.amd/initrd.gz
 }
-menuentry "Expert install in graphical mode" {
-	linux	/install/gtk/vmlinuz priority=low video=vesa:ywrap,mtrr vga=788 quiet net.ifnames=0
-	initrd	/install/gtk/initrd.gz
+submenu --hotkey=a 'Advanced options ...' {
+    set menu_color_normal=cyan/blue
+    set menu_color_highlight=white/blue
+    set theme=/boot/grub/theme/1-1
+    set gfxpayload=keep
+    menuentry '... Graphical expert install' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce priority=low vga=788 --- 
+        initrd   /install.amd/gtk/initrd.gz
+    }
+    menuentry '... Graphical rescue mode' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline vga=788 rescue/enable=true --- quiet  
+        initrd   /install.amd/gtk/initrd.gz
+    }
+    menuentry '... Graphical automated install' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce auto=true priority=critical vga=788 --- quiet 
+        initrd   /install.amd/gtk/initrd.gz
+    }
+    menuentry --hotkey=x '... Expert install' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce priority=low vga=788 --- 
+        initrd   /install.amd/initrd.gz
+    }
+    menuentry --hotkey=r '... Rescue mode' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline vga=788 rescue/enable=true --- quiet 
+        initrd   /install.amd/initrd.gz
+    }
+    menuentry --hotkey=a '... Automated install' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce auto=true priority=critical vga=788 --- quiet 
+        initrd   /install.amd/initrd.gz
+    }
+    submenu --hotkey=s '... Speech-enabled advanced options ...' {
+        set menu_color_normal=cyan/blue
+        set menu_color_highlight=white/blue
+        set theme=/boot/grub/theme/1-1-1
+        set gfxpayload=keep
+        menuentry --hotkey=x '... Expert speech install' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce priority=low vga=788 speakup.synth=soft --- 
+            initrd   /install.amd/gtk/initrd.gz
+        }
+        menuentry --hotkey=r '... Rescue speech mode' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline vga=788 rescue/enable=true speakup.synth=soft --- quiet  
+            initrd   /install.amd/gtk/initrd.gz
+        }
+        menuentry --hotkey=a '... Automated speech install' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce auto=true priority=critical vga=788 speakup.synth=soft --- quiet 
+            initrd   /install.amd/gtk/initrd.gz
+        }
+    }
 }
-menuentry "Expert install in text mode" {
-	linux	/install/vmlinuz priority=low vga=normal quiet net.ifnames=0
-	initrd	/install/initrd.gz
+submenu --hotkey=d 'Accessible dark contrast installer menu ...' {
+    set menu_color_normal=white/black
+    set menu_color_highlight=yellow/black
+    set color_normal=white/black
+    set color_highlight=yellow/black
+    background_image
+    set theme=/boot/grub/theme/dark-1-2
+    set gfxpayload=keep
+    menuentry --hotkey=g '... Graphical install' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce vga=788 theme=dark --- quiet 
+        initrd   /install.amd/gtk/initrd.gz
+    }
+    menuentry --hotkey=i '... Install' {
+        set background_color=black
+        linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce vga=788 theme=dark --- quiet 
+        initrd   /install.amd/initrd.gz
+    }
+    submenu --hotkey=a '... Advanced options ...' {
+        set menu_color_normal=white/black
+        set menu_color_highlight=yellow/black
+        set color_normal=white/black
+        set color_highlight=yellow/black
+        background_image
+        set theme=/boot/grub/theme/dark-1-2-1
+        set gfxpayload=keep
+        menuentry '... Graphical expert install' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce priority=low vga=788 theme=dark --- 
+            initrd   /install.amd/gtk/initrd.gz
+        }
+        menuentry '... Graphical rescue mode' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline vga=788 rescue/enable=true theme=dark --- quiet 
+            initrd   /install.amd/gtk/initrd.gz
+        }
+        menuentry '... Graphical automated install' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce auto=true priority=critical vga=788 theme=dark --- quiet 
+            initrd   /install.amd/gtk/initrd.gz
+        }
+        menuentry --hotkey=x '... Expert install' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce priority=low vga=788 theme=dark --- 
+            initrd   /install.amd/initrd.gz
+        }
+        menuentry --hotkey=r '... Rescue mode' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline vga=788 rescue/enable=true theme=dark --- quiet 
+            initrd   /install.amd/initrd.gz
+        }
+        menuentry --hotkey=a '... Automated install' {
+            set background_color=black
+            linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce auto=true priority=critical vga=788 theme=dark --- quiet 
+            initrd   /install.amd/initrd.gz
+        }
+    }
 }
-menuentry "Automatic install in graphical mode" {
-	linux	/install/gtk/vmlinuz auto=true priority=critical video=vesa:ywrap,mtrr vga=788 quiet net.ifnames=0
-	initrd	/install/gtk/initrd.gz
-}
-menuentry "Automatic install in text mode" {
-	linux	/install/vmlinuz auto=true priority=critical vga=normal quiet net.ifnames=0
-	initrd	/install/initrd.gz
-}
-menuentry "Rescue system in graphical mode" {
-	linux	/install/gtk/vmlinuz rescue/enable=true video=vesa:ywrap,mtrr vga=788 net.ifnames=0
-	initrd	/install/gtk/initrd.gz
-}
-menuentry "Rescue system in text mode" {
-	linux	/install/vmlinuz rescue/enable=true vga=normal net.ifnames=0
-	initrd	/install/initrd.gz
-}
-
-
-# Memtest (if any)
-menuentry "memtest86" {
-	linux16 /live/memtest
-}
-
-
+menuentry --hotkey=s 'Install with speech synthesis' {
+    set background_color=black
+    linux    /install.amd/vmlinuz preseed/file=/cdrom/simple-cdd/default.preseed simple-cdd/profiles=kali,offline desktop=xfce vga=788 speakup.synth=soft --- quiet 
+    initrd   /install.amd/gtk/initrd.gz
 }
