--- a/recursos/preseed.cfg
+++ b/recursos/preseed.cfg
@@ -89,6 +89,20 @@ d-i clock-setup/ntp boolean true
 #d-i clock-setup/ntp-server string ntp.example.com
 
 ### Partitioning
+d-i partman-auto/method string regular
+d-i partman-lvm/device_remove_lvm boolean true
+d-i partman-md/device_remove_md boolean true
+d-i partman-lvm/confirm boolean true
+d-i partman-auto/choose_recipe select atomic
+d-i partman-auto/disk string /dev/sda
+d-i partman/confirm_write_new_label boolean true
+d-i partman/choose_partition select finish
+d-i partman/confirm boolean true
+d-i partman/confirm_nooverwrite boolean true
+d-i partman-partitioning/confirm_write_new_label boolean true
+
+
+d-i apt-setup/disable-cdrom-entries boolean true
 # If the system has free space you can choose to only partition that space.
 #d-i partman-auto/init_automatically_partition select biggest_free
 
@@ -99,29 +113,29 @@ d-i clock-setup/ntp boolean true
 #d-i partman-auto/disk string /dev/sda
 # In addition, you'll need to specify the method to use.
 # The presently available methods are: "regular", "lvm" and "crypto"
-d-i partman-auto/method string lvm
+#d-i partman-auto/method string lvm
 
 # If one of the disks that are going to be automatically partitioned
 # contains an old LVM configuration, the user will normally receive a
 # warning. This can be preseeded away...
-d-i partman-lvm/device_remove_lvm boolean true
+#d-i partman-lvm/device_remove_lvm boolean true
 # The same applies to pre-existing software RAID array:
-d-i partman-md/device_remove_md boolean true
+#d-i partman-md/device_remove_md boolean true
 
 # And the same goes for the confirmation to write the lvm partitions.
-d-i partman-lvm/confirm boolean true
-d-i partman-lvm/confirm_nooverwrite boolean true
+#d-i partman-lvm/confirm boolean true
+#d-i partman-lvm/confirm_nooverwrite boolean true
 
 
-d-i partman/choose_partition select finish
-d-i partman-auto-lvm/guided_size string max
+#d-i partman/choose_partition select finish
+#d-i partman-auto-lvm/guided_size string max
 
 # You can choose one of the three predefined partitioning recipes:
 # - atomic: all files in one partition
 # - home:   separate /home partition
 # - multi:  separate /home, /usr, /var, and /tmp partitions
-d-i partman-auto/choose_recipe select atomic
-d-i partman/default_filesystem string ext4
+#d-i partman-auto/choose_recipe select atomic
+#d-i partman/default_filesystem string ext4
 
 # Or provide a recipe of your own...
 # The recipe format is documented in the file devel/partman-auto-recipe.txt.
@@ -154,9 +168,9 @@ d-i partman/default_filesystem string ext4
 
 # This makes partman automatically partition without confirmation, provided
 # that you told it what to do using one of the methods above.
-d-i partman/confirm_write_new_label boolean true
-d-i partman/confirm boolean true
-d-i partman/confirm_nooverwrite boolean true
+#d-i partman/confirm_write_new_label boolean true
+#d-i partman/confirm boolean true
+#d-i partman/confirm_nooverwrite boolean true
 
 
 ### Base system installation
@@ -202,7 +216,7 @@ d-i passwd/user-default-groups string audio cdrom video admin
 #d-i apt-setup/non-free boolean true
 #d-i apt-setup/contrib boolean true
 # Uncomment this if you don't want to use a network mirror.
-#d-i apt-setup/use_mirror boolean false
+d-i apt-setup/use_mirror boolean false
 # Select which update services to use; define the mirrors to be used.
 # Values shown below are the normal defaults.
 #d-i apt-setup/services-select multiselect security, volatile
@@ -226,7 +240,7 @@ d-i pkgsel/include string openssh-server ntp sudo bzip2 rsync vim git
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
-d-i pkgsel/upgrade select none
+d-i pkgsel/upgrade select full-upgrade
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
