--- a/recursos/unattend/Kali/preseed.cfg
+++ b/recursos/unattend/Kali/preseed.cfg
@@ -236,7 +236,7 @@ tasksel tasksel/first multiselect standard
 #tasksel tasksel/desktop multiselect kde, xfce
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server ntp sudo bzip2 rsync vim git 
+d-i pkgsel/include string openssh-server ntp sudo vim git 
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
