--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -230,10 +230,10 @@ d-i apt-setup/use_mirror boolean false
 #d-i debian-installer/allow_unauthenticated string true
 
 ### Package selection
-tasksel tasksel/first multiselect standard
+#tasksel tasksel/first multiselect standard
 # If the desktop task is selected, install the kde and xfce desktops
 # instead of the default gnome desktop.
-#tasksel tasksel/desktop multiselect kde, xfce
+tasksel tasksel/desktop multiselect kde, xfce
 
 # Individual additional packages to install
 d-i pkgsel/include string openssh-server vim
@@ -331,3 +331,4 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
+#d-i preseed/late_command string apt-install openssh-server vim net-tools
