--- a/recursos/unattend/CentOS/isolinux.cfg
+++ b/recursos/unattend/CentOS/isolinux.cfg
@@ -1,5 +1,5 @@
 default vesamenu.c32
-timeout 300
+timeout 10
 
 display boot.msg
 
@@ -59,7 +59,7 @@ menu separator # insert an empty line
 menu separator # insert an empty line
 
 label kickstart
-  menu label ^Kickstart Installation of CentOS 8
+  menu label ^Kickstart Installation
   kernel vmlinuz
   append initrd=initrd.img inst.stage2=hd:sr0 inst.ks=cdrom:/ks.cfg quiet
   
