--- a/recursos/unattend/CentOS/ks.cfg
+++ b/recursos/unattend/CentOS/ks.cfg
@@ -2,23 +2,30 @@ lang en_US
 keyboard es
 timezone {{timezone}} --isUtc
 rootpw {{passwd}} --iscrypted
-#network  --bootproto=dhcp --device=eth0 --hostname={{hostname}}
+{{interfaces}}
+network --hostname='{{hostname}}'
+user --name={{username}} --password {{passwd}} --iscrypted
 reboot
 cdrom
 bootloader --location=mbr --append="rhgb quiet crashkernel=auto"
 zerombr
 clearpart --all --initlabel
-#ignoredisk  --drives=sda,sdb
 autopart
 auth --passalgo=sha512 --useshadow
 selinux --enforcing
 firewall --enabled --http --ssh
 firstboot --disable
+{{gui}}
+
 %packages
-@^minimal-environment
+{{paqueteambiente}}
 @backup-client
 bacula-client
 rear
-vim
-git
+openssh-server
+{{paquetes}}
+%end
+
+%post
+reboot --eject "/dev/cdrom"
 %end
