--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -10,7 +10,7 @@ d-i keyboard-configuration/xkb-keymap select us
 ### Network configuration
 # netcfg will choose an interface that has link if possible. This makes it
 # skip displaying a list if there is more than one interface.
-d-i netcfg/choose_interface select auto
+#d-i netcfg/choose_interface select auto
 
 # Encoding to use on the console:
 # Choices: ARMSCII-8, CP1251, CP1255, CP1256, GEORGIAN-ACADEMY, GEORGIAN-PS, IBM1133, ISIRI-3342, ISO-8859-1, ISO-8859-10, ISO-8859-11, ISO-8859-13, ISO-8859-14, ISO-8859-15, ISO-8859-16, ISO-8859-2, ISO-8859-3, ISO-8859-4, ISO-8859-5, ISO-8859-6, ISO-8859-7, ISO-8859-8, ISO-8859-9, KOI8-R, KOI8-U, TIS-620, UTF-8, VISCII
@@ -32,7 +32,7 @@ console-setup console-setup/charmap47 select UTF-8
 # configuration below.
 #d-i netcfg/dhcp_failed note
 #d-i netcfg/dhcp_options select Configure network manually
-
+{{interfaces}}
 # Static network configuration.
 #d-i netcfg/get_nameservers string 192.168.1.1
 #d-i netcfg/get_ipaddress string 192.168.1.42
@@ -43,8 +43,8 @@ console-setup console-setup/charmap47 select UTF-8
 # Any hostname and domain names assigned from dhcp take precedence over
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
-#d-i netcfg/get_hostname string vagrant
-d-i netcfg/get_domain string prueba.lan
+d-i netcfg/get_hostname string {{hostname}} 
+d-i netcfg/get_domain string {{hostname}}
 
 # Disable that annoying WEP key dialog.
 d-i netcfg/wireless_wep string
@@ -233,7 +233,8 @@ d-i apt-setup/use_mirror boolean false
 #tasksel tasksel/first multiselect standard
 # If the desktop task is selected, install the kde and xfce desktops
 # instead of the default gnome desktop.
-tasksel tasksel/desktop multiselect kde, xfce
+#tasksel tasksel/desktop multiselect xfce 
+{{ambiente}}
 
 # Individual additional packages to install
 d-i pkgsel/include string openssh-server vim
