--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -1,13 +1,13 @@
 {
-    "Root": "F:\\SanboxTest",
+    "Root": "E:\\SanboxTest",
     "MaquinasVirtuales": [
         {
             "SistemaOperativo": "Windows 10",
             "TipoAmbiente": "Windows 10 Home",
-            "Hostname": "prueba",
+            "Hostname": "contositoxx",
             "DiscosVirtuales": [20],
             "Procesadores": 2,
-            "RutaISO": "F:\\Win10_20H2_v2_English_x64.iso",
+            "RutaISO": "E:\\SanboxTest\\Win10_1909_English_x64.iso",
             "MemoriaRAM": {
                 "Tipo": "Dynamic",
                 "Minima": 1.0,
