--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -32,7 +32,8 @@
                 }
             ],
             "Servicios": {
-            }
+            },
+            "RutaMSI": ["C:\\Users\\Administrator\\Desktop\\Firefox Setup 85.0.2.msi", "C:\\Users\\Administrator\\Desktop\\7z1900-x64.msi"]
         }
     ]
 }
