--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -1,5 +1,5 @@
 {
-    "Root": "E:\\SanboxTest",
+    "Root": "F:\\SanboxTest",
     "MaquinasVirtuales": [
         {
             "SistemaOperativo": "Windows Server 2019",
@@ -7,7 +7,7 @@
             "Hostname": "michisadddd",
             "DiscosVirtuales": [20],
             "Procesadores": 2,
-            "RutaISO": "E:\\SanboxTest\\WindowsServer2019_SERVER_EVAL_x64FRE_en-us_1.iso",
+            "RutaISO": "F:\\WindowsServer2019.iso",
             "MemoriaRAM": {
                 "Tipo": "Static",
                 "Memoria": 1.0
@@ -54,6 +54,19 @@
                                 "WebDAV": false
                             }
                         ]
+                    },
+                    {
+                        "Nombre": "MiSitioDos.local",
+                        "Directorio": "MiSitioDos",
+                        "Bindings": [
+                            {
+                                "Dominio": "misitiodos.local",
+                                "Interfaz": "Red Externa",
+                                "Protocolo": "https",
+                                "Puerto": 443,
+                                "WebDAV": true
+                            }
+                        ]
                     }
                 ],
                 "DHCP": [
@@ -70,7 +83,24 @@
                             "Fin": "192.168.12.25",
                             "IP": "192.168.12.25"
                         },
-                        "Lease": "000:01:00",
+                        "Lease": "000.01:00",
+                        "Gateway": "192.168.12.55",
+                        "DNS": "192.168.12.60"
+                    },
+                    {
+                        "Nombre": "ScopeDos",
+                        "Rango": {
+                            "Inicio": "192.168.11.20",
+                            "Fin": "192.168.11.40",
+                            "MascaraRed": "24"
+                        },
+                        "Exclusiones": {
+                            "Tipo": "Unica",
+                            "Inicio": "192.168.11.30",
+                            "Fin": "192.168.11.25",
+                            "IP": "192.168.11.25"
+                        },
+                        "Lease": "000.01:00",
                         "Gateway": "192.168.12.55",
                         "DNS": "192.168.12.60"
                     }
@@ -79,23 +109,28 @@
                     {
                         "Tipo": "Forward",
                         "Nombre": "ZonaUno",
-                        "Backup": "",
+                        "Backup": "F:\\Prueba.dns",
                         "Registros": [
                             {
                                 "Tipo": "A",
-                                "Hostname": "misitio.local",
-                                "IP": "10.23.1.2",
-                                "PTR": true   
+                                "Hostname": "misitioA.local",
+                                "IP": "10.23.1.2"
+                            }
+                        ]
+                    },
+                    {
+                        "Tipo": "Reverse",
+                        "NetID": "10.10.10.0/24",
+                        "Registros": [
+                            {
+                                "Tipo": "PTR",
+                                "Hostname": "misitioRegi.local",
+                                "Host": "2"
                             },
                             {
                                 "Tipo": "CNAME",
                                 "Alias": "alias",
                                 "FQDN": "misitio2.local"
-                            },
-                            {
-                                "Tipo": "MX",
-                                "ChildDomain": "misitio2.local",
-                                "FQDN": "prueba.misitio2.local"
                             }
                         ]
                     }
