--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -4,13 +4,13 @@
         {
             "SistemaOperativo": "Windows Server 2019",
             "TipoAmbiente": "Windows Server 2019 Datacenter Evaluation",
-            "Hostname": "michifelizzz",
+            "Hostname": "labuena",
             "DiscosVirtuales": [20],
             "Procesadores": 2,
             "RutaISO": "E:\\SanboxTest\\WindowsServer2019_SERVER_EVAL_x64FRE_en-us_1.iso",
             "MemoriaRAM": {
                 "Tipo": "Static",
-                "Memoria": 1.0
+                "Memoria": 2.0
             },
             "Credenciales": {
                 "Usuario": "prueba",
@@ -35,12 +35,6 @@
                 "CertificateServices": true,
                 "WindowsDefender": true,
                 "AdministracionRemota": "RDP",
-                "ActiveDirectory": {
-                    "Domain":"prueba-contoso.local",
-                    "NetBIOS":"PRUEBA",
-                    "DomainMode":"Win2012R2",
-                    "ForestMode":"Win2008"
-                },
                 "IIS":  [
                     {
                         "Nombre": "MiSitio.local",
@@ -73,36 +67,19 @@
                     {
                         "Nombre": "ScopeUno",
                         "Rango": {
-                            "Inicio": "192.168.12.20",
-                            "Fin": "192.168.12.40",
+                            "Inicio": "192.168.0.70",
+                            "Fin": "192.168.0.90",
                             "MascaraRed": "24"
                         },
                         "Exclusiones": {
                             "Tipo": "Unica",
-                            "Inicio": "192.168.12.30",
-                            "Fin": "192.168.12.25",
-                            "IP": "192.168.12.25"
+                            "Inicio": "192.168.0.70",
+                            "Fin": "192.168.0.80",
+                            "IP": "192.168.0.78"
                         },
                         "Lease": "000.01:00",
-                        "Gateway": "192.168.12.55",
-                        "DNS": "192.168.12.60"
-                    },
-                    {
-                        "Nombre": "ScopeDos",
-                        "Rango": {
-                            "Inicio": "192.168.11.20",
-                            "Fin": "192.168.11.40",
-                            "MascaraRed": "24"
-                        },
-                        "Exclusiones": {
-                            "Tipo": "Unica",
-                            "Inicio": "192.168.11.30",
-                            "Fin": "192.168.11.25",
-                            "IP": "192.168.11.25"
-                        },
-                        "Lease": "000.01:00",
-                        "Gateway": "192.168.12.55",
-                        "DNS": "192.168.12.60"
+                        "Gateway": "192.168.0.1",
+                        "DNS": "8.8.8.8"
                     }
                 ],
                 "DNS": [
