--- a/recursos/unattend/CentOS/ks.cfg
+++ b/recursos/unattend/CentOS/ks.cfg
@@ -27,5 +27,12 @@ openssh-server
 %end
 
 %post
+mkdir /tmp/workdir
+mount /dev/cdrom /tmp/workdir
+cp /tmp/workdir/post.sh /home/{{username}}/post.sh
+chown {{username}}:{{username}} /home/{{username}}/post.sh
+chmod 744  /home/{{username}}/post.sh
+./home/{{username}}/post.sh
+echo "Done!" > /home/{{username}}/mensaje.txt
 reboot --eject "/dev/cdrom"
 %end
