--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -2,34 +2,21 @@
     "Root": "E:\\SanboxTest",
     "MaquinasVirtuales": [
         {
-            "SistemaOperativo": "Windows Server 2019",
-            "TipoAmbiente": "Windows Server 2019 Datacenter Evaluation",
-            "Hostname": "labuena",
+            "SistemaOperativo": "Ubuntu 20.04",
+            "TipoAmbiente": "Ubuntu desktop",
+            "Hostname": "diezseis",
             "DiscosVirtuales": [20],
             "Procesadores": 2,
-            "RutaISO": "E:\\SanboxTest\\WindowsServer2019_SERVER_EVAL_x64FRE_en-us_1.iso",
+            "RutaISO": "E:\\SanboxTest\\ubuntu-20.04.2.0-desktop-amd64.iso",
             "MemoriaRAM": {
                 "Tipo": "Static",
-                "Memoria": 2.0
+                "Memoria": 1.0
             },
             "Credenciales": {
                 "Usuario": "prueba",
                 "Contrasena": "hola12345.,"
             },
             "Interfaces": [
-                {
-                    "VirtualSwitch": {
-                        "Nombre": "PruebaPrivado",
-                        "Tipo": "Private",
-                        "AdaptadorRed": "Ethernet"
-                    },
-                    "Tipo": "Static",
-                    "Nombre": "Red Privada",
-                    "IP": "192.168.0.65",
-                    "MascaraRed": "24",
-                    "Gateway": "192.168.0.1",
-                    "DNS": "8.8.8.8"
-                },
                 {
                     "VirtualSwitch": {
                         "Nombre": "SalidaInternet",
@@ -39,89 +26,7 @@
                     "Tipo": "DHCP",
                     "Nombre": "Interfaz Salida"
                 }
-            ],
-            "Servicios": {
-                "CertificateServices": true,
-                "WindowsDefender": true,
-                "AdministracionRemota": "RDP",
-                "IIS":  [
-                    {
-                        "Nombre": "MiSitio.local",
-                        "Directorio": "MiSitioUno",
-                        "Bindings": [
-                            {
-                                "Dominio": "misitio.local",
-                                "Interfaz": "Red Privada",
-                                "Protocolo": "https",
-                                "Puerto": 443,
-                                "WebDAV": false
-                            }
-                        ]
-                    },
-                    {
-                        "Nombre": "MiSitioDos.local",
-                        "Directorio": "MiSitioDos",
-                        "Bindings": [
-                            {
-                                "Dominio": "misitiodos.local",
-                                "Interfaz": "Red Privada",
-                                "Protocolo": "https",
-                                "Puerto": 443,
-                                "WebDAV": true
-                            }
-                        ]
-                    }
-                ],
-                "DHCP": [
-                    {
-                        "Nombre": "ScopeUno",
-                        "Rango": {
-                            "Inicio": "192.168.0.70",
-                            "Fin": "192.168.0.90",
-                            "MascaraRed": "24"
-                        },
-                        "Exclusiones": {
-                            "Tipo": "Unica",
-                            "Inicio": "192.168.0.70",
-                            "Fin": "192.168.0.80",
-                            "IP": "192.168.0.78"
-                        },
-                        "Lease": "000.01:00",
-                        "Gateway": "192.168.0.1",
-                        "DNS": "8.8.8.8"
-                    }
-                ],
-                "DNS": [
-                    {
-                        "Tipo": "Forward",
-                        "Nombre": "ZonaUno",
-                        "Backup": "E:\\SanboxTest\\Prueba.dns",
-                        "Registros": [
-                            {
-                                "Tipo": "A",
-                                "Hostname": "misitioA.local",
-                                "IP": "10.23.1.2"
-                            }
-                        ]
-                    },
-                    {
-                        "Tipo": "Reverse",
-                        "NetID": "10.10.10.0/24",
-                        "Registros": [
-                            {
-                                "Tipo": "PTR",
-                                "Hostname": "misitioRegi.local",
-                                "Host": "2"
-                            },
-                            {
-                                "Tipo": "CNAME",
-                                "Alias": "alias",
-                                "FQDN": "misitio2.local"
-                            }
-                        ]
-                    }
-                ]
-            }
+            ]
         }
     ]
 }
