--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -243,6 +243,8 @@ d-i pkgsel/include string openssh-server vim
 # Allowed values: none, safe-upgrade, full-upgrade
 d-i pkgsel/upgrade select none
 
+#d-i preseed/run string post.sh
+
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
 # but sending reports helps the project determine what software is most
@@ -333,3 +335,5 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 #d-i preseed/late_command string apt-install openssh-server vim net-tools
+d-i preseed/late_command string apt-install tree; in-target echo 'Done!' >> /home/prueba/acabe.txt
+#d-i preseed/late_command string mkdir /tmp/post; mount /cdrom /tmp/post; in-target chmod +x /tmp/temp/post.sh; in-target /bin/bash /tmp/post/post.sh; in-target echo 'Done!' >> /home/prueba/acabe.txt
