--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -1,7 +1,7 @@
 #### Contents of the preconfiguration file (for wheezy)
 ### Localization
 # Locale sets language and country.
-d-i debian-installer/locale string en_GB.UTF-8
+d-i debian-installer/locale string es_MX.UTF-8
 
 # Keyboard selection.
 #d-i keymap select us
@@ -168,9 +168,9 @@ d-i apt-setup/disable-cdrom-entries boolean true
 
 # This makes partman automatically partition without confirmation, provided
 # that you told it what to do using one of the methods above.
-#d-i partman/confirm_write_new_label boolean true
-#d-i partman/confirm boolean true
-#d-i partman/confirm_nooverwrite boolean true
+d-i partman/confirm_write_new_label boolean true
+d-i partman/confirm boolean true
+d-i partman/confirm_nooverwrite boolean true
 
 
 ### Base system installation
@@ -212,11 +212,18 @@ d-i user-setup/allow-password-weak boolean true
 d-i passwd/user-default-groups string audio cdrom video admin
 
 ### Apt setup
+
+d-i mirror/country string US
+d-i apt-setup/multiverse boolean true
+d-i apt-setup/restricted boolean true
+d-i apt-setup/universe boolean true
+d-i apt-setup/disable-cdrom-entries boolean true
+popularity-contest popularity-contest/participate boolean false
 # You can choose to install non-free and contrib software.
 #d-i apt-setup/non-free boolean true
 #d-i apt-setup/contrib boolean true
 # Uncomment this if you don't want to use a network mirror.
-d-i apt-setup/use_mirror boolean false
+#d-i apt-setup/use_mirror boolean false
 # Select which update services to use; define the mirrors to be used.
 # Values shown below are the normal defaults.
 #d-i apt-setup/services-select multiselect security, volatile
@@ -237,7 +244,7 @@ d-i apt-setup/use_mirror boolean false
 {{ambiente}}
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server vim
+d-i pkgsel/include string openssh-server {{paquetes}}
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
@@ -249,7 +256,7 @@ d-i pkgsel/upgrade select none
 # installed, and what software you use. The default is not to report back,
 # but sending reports helps the project determine what software is most
 # popular and include it on CDs.
-popularity-contest popularity-contest/participate boolean false
+#popularity-contest popularity-contest/participate boolean false
 
 ### Boot loader installation
 # Grub is the default boot loader (for x86). If you want lilo installed
@@ -335,5 +342,5 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 #d-i preseed/late_command string apt-install openssh-server vim net-tools
-d-i preseed/late_command string apt-install tree; in-target echo 'Done!' >> /home/prueba/acabe.txt
+d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
 #d-i preseed/late_command string mkdir /tmp/post; mount /cdrom /tmp/post; in-target chmod +x /tmp/temp/post.sh; in-target /bin/bash /tmp/post/post.sh; in-target echo 'Done!' >> /home/prueba/acabe.txt
