--- a/recursos/unattend/Kali/preseed.cfg
+++ b/recursos/unattend/Kali/preseed.cfg
@@ -1,7 +1,7 @@
 #### Contents of the preconfiguration file (for wheezy)
 ### Localization
 # Locale sets language and country.
-d-i debian-installer/locale string en_GB.UTF-8
+d-i debian-installer/locale string es_MX.UTF-8
 
 # Keyboard selection.
 #d-i keymap select us
@@ -10,7 +10,7 @@ d-i keyboard-configuration/xkb-keymap select us
 ### Network configuration
 # netcfg will choose an interface that has link if possible. This makes it
 # skip displaying a list if there is more than one interface.
-d-i netcfg/choose_interface select auto
+#d-i netcfg/choose_interface select auto
 
 # Encoding to use on the console:
 # Choices: ARMSCII-8, CP1251, CP1255, CP1256, GEORGIAN-ACADEMY, GEORGIAN-PS, IBM1133, ISIRI-3342, ISO-8859-1, ISO-8859-10, ISO-8859-11, ISO-8859-13, ISO-8859-14, ISO-8859-15, ISO-8859-16, ISO-8859-2, ISO-8859-3, ISO-8859-4, ISO-8859-5, ISO-8859-6, ISO-8859-7, ISO-8859-8, ISO-8859-9, KOI8-R, KOI8-U, TIS-620, UTF-8, VISCII
@@ -32,7 +32,7 @@ console-setup console-setup/charmap47 select UTF-8
 # configuration below.
 #d-i netcfg/dhcp_failed note
 #d-i netcfg/dhcp_options select Configure network manually
-
+{{interfaces}}
 # Static network configuration.
 #d-i netcfg/get_nameservers string 192.168.1.1
 #d-i netcfg/get_ipaddress string 192.168.1.42
@@ -44,7 +44,9 @@ console-setup console-setup/charmap47 select UTF-8
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
 #d-i netcfg/get_hostname string vagrant
-d-i netcfg/get_domain string prueba.lan
+d-i netcfg/get_hostname string {{hostname}} 
+d-i netcfg/get_domain string {{hostname}}
+d-i netcfg/hostname string {{hostname}}
 
 # Disable that annoying WEP key dialog.
 d-i netcfg/wireless_wep string
@@ -99,7 +101,7 @@ d-i partman/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
-d-i partman-partitioning/confirm_write_new_label boolean true
+#d-i partman-partitioning/confirm_write_new_label boolean true
 
 
 d-i apt-setup/disable-cdrom-entries boolean true
@@ -212,11 +214,18 @@ d-i user-setup/allow-password-weak boolean true
 d-i passwd/user-default-groups string audio cdrom video admin
 
 ### Apt setup
+d-i mirror/country string US
+d-i apt-setup/multiverse boolean true
+d-i apt-setup/restricted boolean true
+d-i apt-setup/universe boolean true
+d-i apt-setup/disable-cdrom-entries boolean true
+popularity-contest popularity-contest/participate boolean false
 # You can choose to install non-free and contrib software.
+#d-i apt-setup/services-select multiselect
 #d-i apt-setup/non-free boolean true
 #d-i apt-setup/contrib boolean true
 # Uncomment this if you don't want to use a network mirror.
-d-i apt-setup/use_mirror boolean false
+#d-i apt-setup/use_mirror boolean false
 # Select which update services to use; define the mirrors to be used.
 # Values shown below are the normal defaults.
 #d-i apt-setup/services-select multiselect security, volatile
@@ -230,23 +239,24 @@ d-i apt-setup/use_mirror boolean false
 #d-i debian-installer/allow_unauthenticated string true
 
 ### Package selection
-tasksel tasksel/first multiselect standard
+#tasksel tasksel/first multiselect standard
 # If the desktop task is selected, install the kde and xfce desktops
 # instead of the default gnome desktop.
 #tasksel tasksel/desktop multiselect kde, xfce
-
+{{ambiente}}
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server ntp sudo vim git 
+d-i pkgsel/upgrade select full-upgrade
+d-i pkgsel/include string openssh-server {{paquetes}}
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
-d-i pkgsel/upgrade select full-upgrade
+
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
 # but sending reports helps the project determine what software is most
 # popular and include it on CDs.
-popularity-contest popularity-contest/participate boolean false
+#popularity-contest popularity-contest/participate boolean false
 
 ### Boot loader installation
 # Grub is the default boot loader (for x86). If you want lilo installed
@@ -262,7 +272,7 @@ d-i grub-installer/only_debian boolean true
 
 # This one makes grub-installer install to the MBR if it also finds some other
 # OS, which is less safe as it might not be able to boot that other OS.
-d-i grub-installer/with_other_os boolean true
+d-i grub-installer/with_other_os boolean false
 
 # Alternatively, if you want to install to a location other than the mbr,
 # uncomment and edit these lines:
@@ -280,9 +290,9 @@ d-i grub-installer/with_other_os boolean true
 
 # GRUB install devices:
 # Choices: /dev/sda (21474 MB; VMware_Virtual_S), /dev/sda1 (21472 MB; VMware_Virtual_S)
-grub-pc		grub-pc/install_devices	multiselect	/dev/sda
+#grub-pc		grub-pc/install_devices	multiselect	/dev/sda
 # Choices: Enter device manually, /dev/sda
-grub-installer	grub-installer/choose_bootdev	select	/dev/sda
+#grub-installer	grub-installer/choose_bootdev	select	/dev/sda
 
 ### Finishing up the installation
 # During installations from serial console, the regular virtual consoles
@@ -333,3 +343,4 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
+#d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
