--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -244,7 +244,7 @@ popularity-contest popularity-contest/participate boolean false
 {{ambiente}}
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server {{paquetes}}
+d-i pkgsel/include string openssh-server vim {{paquetes}}
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
