--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -212,13 +212,20 @@ d-i user-setup/allow-password-weak boolean true
 d-i passwd/user-default-groups string audio cdrom video admin
 
 ### Apt setup
-
 d-i mirror/country string US
 d-i apt-setup/multiverse boolean true
 d-i apt-setup/restricted boolean true
 d-i apt-setup/universe boolean true
+d-i apt-setup/non-free boolean true
+d-i apt-setup/contrib boolean true
+#d-i apt-setup/use_mirror boolean false
+d-i mirror/country string manual
+d-i mirror/http/hostname string http.us.debian.org
+d-i mirror/http/directory string /debian
+d-i mirror/http/proxy string
+
 d-i apt-setup/disable-cdrom-entries boolean true
-popularity-contest popularity-contest/participate boolean false
+
 # You can choose to install non-free and contrib software.
 #d-i apt-setup/non-free boolean true
 #d-i apt-setup/contrib boolean true
@@ -227,8 +234,8 @@ popularity-contest popularity-contest/participate boolean false
 # Select which update services to use; define the mirrors to be used.
 # Values shown below are the normal defaults.
 #d-i apt-setup/services-select multiselect security, volatile
-#d-i apt-setup/security_host string security.debian.org
-#d-i apt-setup/volatile_host string volatile.debian.org
+d-i apt-setup/security_host string security.debian.org
+d-i apt-setup/volatile_host string volatile.debian.org
 
 
 # By default the installer requires that repositories be authenticated
@@ -244,19 +251,17 @@ popularity-contest popularity-contest/participate boolean false
 {{ambiente}}
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server vim {{paquetes}}
+d-i pkgsel/include string openssh-server {{paquetes}}
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
-d-i pkgsel/upgrade select none
-
-#d-i preseed/run string post.sh
+d-i pkgsel/upgrade select full-upgrade
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
 # but sending reports helps the project determine what software is most
 # popular and include it on CDs.
-#popularity-contest popularity-contest/participate boolean false
+popularity-contest popularity-contest/participate boolean false
 
 ### Boot loader installation
 # Grub is the default boot loader (for x86). If you want lilo installed
@@ -342,5 +347,5 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 #d-i preseed/late_command string apt-install openssh-server vim net-tools
-d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
+#d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
 #d-i preseed/late_command string mkdir /tmp/post; mount /cdrom /tmp/post; in-target chmod +x /tmp/temp/post.sh; in-target /bin/bash /tmp/post/post.sh; in-target echo 'Done!' >> /home/prueba/acabe.txt
