--- a/recursos/unattend/Kali/preseed.cfg
+++ b/recursos/unattend/Kali/preseed.cfg
@@ -218,14 +218,16 @@ d-i mirror/country string US
 d-i apt-setup/multiverse boolean true
 d-i apt-setup/restricted boolean true
 d-i apt-setup/universe boolean true
+d-i apt-setup/non-free boolean true
+d-i apt-setup/contrib boolean true
+d-i apt-setup/use_mirror boolean false
 d-i apt-setup/disable-cdrom-entries boolean true
-popularity-contest popularity-contest/participate boolean false
 # You can choose to install non-free and contrib software.
 #d-i apt-setup/services-select multiselect
 #d-i apt-setup/non-free boolean true
 #d-i apt-setup/contrib boolean true
 # Uncomment this if you don't want to use a network mirror.
-#d-i apt-setup/use_mirror boolean false
+
 # Select which update services to use; define the mirrors to be used.
 # Values shown below are the normal defaults.
 #d-i apt-setup/services-select multiselect security, volatile
@@ -245,7 +247,7 @@ popularity-contest popularity-contest/participate boolean false
 #tasksel tasksel/desktop multiselect kde, xfce
 {{ambiente}}
 # Individual additional packages to install
-d-i pkgsel/upgrade select full-upgrade
+d-i pkgsel/upgrade select none
 d-i pkgsel/include string openssh-server {{paquetes}}
 
 # Whether to upgrade packages after debootstrap.
@@ -256,7 +258,7 @@ d-i pkgsel/include string openssh-server {{paquetes}}
 # installed, and what software you use. The default is not to report back,
 # but sending reports helps the project determine what software is most
 # popular and include it on CDs.
-#popularity-contest popularity-contest/participate boolean false
+popularity-contest popularity-contest/participate boolean false
 
 ### Boot loader installation
 # Grub is the default boot loader (for x86). If you want lilo installed
@@ -343,4 +345,4 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-#d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
+d-i preseed/late_command string in-target echo 'deb http://http.kali.org/kali kali-rolling main non-free contrib' >> /etc/apt/sources.list
