--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -349,3 +349,7 @@ d-i finish-install/reboot_in_progress note
 #d-i preseed/late_command string apt-install openssh-server vim net-tools
 #d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
 #d-i preseed/late_command string mkdir /tmp/post; mount /cdrom /tmp/post; in-target chmod +x /tmp/temp/post.sh; in-target /bin/bash /tmp/post/post.sh; in-target echo 'Done!' >> /home/prueba/acabe.txt
+d-i preseed/late_command string \
+ in-target sh -c 'mkdir -p --mode=0755 /home/prueba/test && echo "finally, madafaka" > /home/prueba/test/ohshit.txt'; \
+ in-target sh -c 'usermod -p "!" root'; \
+ in-target sh -c 'systemctl enable ssh';  
