--- a/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Nginx/http/drupal.conf
+++ b/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Nginx/http/drupal.conf
@@ -1,7 +1,7 @@
 server{
-    listen {{ipSitio}}:{{puerto}};
+    listen {{ip}}:{{puerto}};
     server_name {{dominioSitio}};
-    root /var/www/{{nombreSitio}};
+    root /var/www/{{nombreSitio}}/;
     location = /favicon.ico {
         log_not_found off;
         access_log off;
