--- a/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Nginx/https/sitio-ssl.conf
+++ b/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Nginx/https/sitio-ssl.conf
@@ -1,5 +1,5 @@
 server {
-	listen 80;
+	listen {{ip}}:80;
 	server_name {{dominioSitio}} www.{{dominioSitio}};
 	return 301 https://{{dominioSitio}}$request_uri;
 }
