--- a/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Nginx/https/drupal-ssl.conf
+++ b/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Nginx/https/drupal-ssl.conf
@@ -1,6 +1,6 @@
  server {
-    listen {{ipSitio}}:80;
-    listen {{ipSitio}}:{{puerto}} ssl;
+    listen {{ip}}:80;
+    listen {{ip}}:{{puerto}} ssl;
     root /var/www/{{nombreSitio}}/;
     index index.html index.htm index.nginx-debian.html;
     server_name {{dominioSitio}};
