--- a/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Apache2/https/sitio.conf
+++ b/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Apache2/https/sitio.conf
@@ -1,5 +1,5 @@
 <IfModule mod_ssl.c>
-        <VirtualHost *:80>
+        <VirtualHost {{ip}}:80>
                 ServerName {{dominioSitio}}
                 ServerAlias www.{{dominioSitio}}
                 Redirect permanent / https://{{dominioSitio}}/
@@ -12,7 +12,7 @@
                 ErrorLog ${APACHE_LOG_DIR}/error.log
                 CustomLog ${APACHE_LOG_DIR}/access.log combined
                 SSLEngine on
-                SSLCertificateFile      /etc/ssl/certs/{{dominioSitio}}.pem
+                SSLCertificateFile      /etc/ssl/certs/{{dominioSitio}}.crt
                 SSLCertificateKeyFile /etc/ssl/private/{{dominioSitio}}.key
                 <FilesMatch "\.(cgi|shtml|phtml|php)$">
                                 SSLOptions +StdEnvVars
