--- a/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Apache2/https/drupal.conf
+++ b/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/Apache2/https/drupal.conf
@@ -20,13 +20,13 @@
         SSLCipherSuite EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
         SSLProtocol All -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
         SSLCompression off
-        SSLUseStapling on
-        <Directory /var/www/html/{{dominioSitio}}/>
+        #SSLUseStapling on
+        <Directory /var/www/html/{{nombreSitio}}/>
                 Options FollowSymlinks
                 AllowOverride All
                 Require all granted
         </Directory>
-        <Directory /var/www/html/{{dominioSitio}}/>
+        <Directory /var/www/html/{{nombreSitio}}/>
                 RewriteEngine on
                 RewriteBase /
                 RewriteCond %{REQUEST_FILENAME} !-f
