tan cerca pero tan lejos :c

--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -357,4 +357,5 @@ d-i preseed/late_command string \
  in-target sh -c 'apt-get install -y dos2unix'; \
  in-target sh -c 'cd /servicios/'; \
  in-target sh -c 'dos2unix ConfigurarServiciosLinux.sh'; \
- in-target sh -c './ConfigurarServiciosLinux.sh'; 
+ in-target sh -c '/bin/bash ConfigurarServiciosLinux.sh'; 
+ 
