--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -354,8 +354,5 @@ d-i preseed/late_command string \
  in-target sh -c 'echo "deb http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'echo "deb-src http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'apt-get update'; \
- in-target sh -c 'apt-get install -y dos2unix'; \
- in-target sh -c 'cd /servicios/'; \
- in-target sh -c 'dos2unix ConfigurarServiciosLinux.sh'; \
- in-target sh -c '/bin/bash ConfigurarServiciosLinux.sh'; 
+ in-target sh -c 'apt-get install -y dos2unix'; 
  
