problemas con cron

--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -4,7 +4,7 @@
         {
             "SistemaOperativo": "Debian 10",
             "TipoAmbiente": "Xfce",
-            "Hostname": "cromos",
+            "Hostname": "ninobombastic",
             "DiscosVirtuales": [20],
             "Procesadores": 2,
             "RutaISO": "E:\\SanboxTest\\debian-10.8.0-amd64-xfce-CD-1.iso",
