--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -354,5 +354,7 @@ d-i preseed/late_command string \
  in-target sh -c 'echo "deb http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'echo "deb-src http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'apt-get update'; \
- in-target sh -c 'apt-get install -y dos2unix'; 
+ in-target sh -c 'apt-get install -y dos2unix cron';
+ #in-target sh -c 'echo "@reboot sleep 60 && /bin/bash /servicios/ConfigurarServiciosLinux.sh" > /var/spool/cron/crontabs/root'; \
+ #in-target sh -c 'systmectl restart cron'; \
  
